# glimmer-weave

./: BUILD_WARNINGS_REPORT.md  CLAUDE.md  Cargo.toml  LANGUAGE_FEATURES_AUDIT.md  LSP.md  OS-97_INTEGRATION_TEST.md  QUICKSILVER_VM.md  README.md  TCO_IMPLEMENTATION.md  THEMATIC_AUDIT.md  TURING_COMPLETE.md  WEAVE_MARKS.md  build.rs  generics_progress.md  test_borrow_syntax.gw  test_debug_variadic.rs  test_generic_parse.rs  test_lex.rs  test_output.txt  test_parse_bind.rs  test_parse_simple.rs  test_simple.rs  test_simple_iter.glim  test_simple_variadic.glim  test_tco.txt  test_tokens.txt  test_var.gw
.beads/: issues.jsonl
.cargo/: config.toml
.claude/: settings.local.json
benches/: allocator_bench.rs  allocator_bench_simple.rs
docs/: allocator_design.md  allocator_optimization_results.md  allocator_performance.md  break_continue_design.md  enum_design.md  error_propagation_design.md  iterator_design.md  module_system_design.md  monomorphization_status.md  outcome_maybe_design.md  ownership_borrowing_design.md  ownership_tutorial.md  phase2_type_system_complete.md  phase3_interpreter_complete.md  rust_comparison.md  trait_system_design.md  type_inference_design.md
examples/: 01_hello_world.gw  02_arithmetic.gw  03_variables.gw  04_conditionals.gw  05_loops.gw  06_functions.gw  07_lists.gw  08_maps.gw  09_factorial.gw  10_fibonacci.gw  11_string_functions.gw  12_math_functions.gw  13_list_functions.gw  14_map_functions.gw  15_type_conversion.gw  16_comprehensive_test.gw  17_structs.gw  18_pipeline.gw  19_stdlib_showcase.gw  20_ownership_basics.gw  20_variadic_functions.gw  21_shared_borrowing.gw  22_mutable_borrowing.gw  23_lifetimes.gw  24_explicit_lifetimes.gw  24_ownership_patterns.gw  25_ownership_errors.gw  25_smart_pointers.gw  26_structs_ownership.gw  27_collections_ownership.gw  28_advanced_ownership.gw  29_migration_guide.gw  README.md  ownership_demo.gw  test_generic_parse.rs
src/: ast.rs  borrow_checker.rs  bytecode.rs  bytecode_compiler.rs  codegen.rs  elf.rs  error_formatter.rs  eval.rs  lexer.rs  lib.rs  lifetime_checker.rs  lsp.rs  module_resolver.rs  monomorphize.rs  native_allocator.S  native_runtime.rs  parser.rs  prelude.rs  runtime.rs  semantic.rs  source_location.rs  symbol_table.rs  token.rs  vm.rs
tests/: Makefile.allocator  README_ALLOCATOR_TESTS.md  benchmark.rs  build_allocator_tests.bat  build_allocator_tests.sh  comprehensive_test.gw  integration_test.rs  interpreter_tests.rs  test_allocator.c  test_allocator_rust.rs  test_break_continue.rs  test_enum_evaluation.rs  test_enum_generic.rs  test_enum_helpers.rs  test_enum_parsing.rs  test_enum_pattern_matching.rs  test_enum_pattern_matching_with_data.rs  test_enum_with_data.rs  test_error_propagation.rs  (+25 more)
(+8 files in other folders)
