[package]
name = "glimmer_weave"
version = "0.1.0"
authors = ["Glimmer-Weave Contributors"]
edition = "2021"

[dependencies]
# Use libm for no_std environments (always available, used when std is disabled)
libm = { version = "0.2", default-features = false }
# REPL line editor with history and completion
rustyline = { version = "13.0", optional = true }
# Directory paths for history file
dirs = { version = "5.0", optional = true }

[dev-dependencies]

[features]
# Enable std by default for tests and development
default = ["std"]
# std feature: enables standard library (needed for tests)
std = []
# REPL feature (requires std)
repl = ["rustyline", "dirs", "std"]

[lib]
name = "glimmer_weave"
path = "src/lib.rs"

[[bin]]
name = "glimmer-repl"
path = "src/bin/repl.rs"
required-features = ["repl"]
