[package]
name = "glimmer_weave"
version = "0.1.0"
authors = ["Glimmer-Weave Contributors"]
edition = "2021"

[dependencies]
# Use libm for no_std environments (always available, used when std is disabled)
libm = { version = "0.2", default-features = false }
# REPL line editor with history and completion
rustyline = { version = "13.0", optional = true }
# Directory paths for history file
dirs = { version = "5.0", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]

[features]
# Enable std by default for tests and development
default = ["std"]
# std feature: enables standard library (needed for tests)
std = []
# REPL feature (requires std)
repl = ["rustyline", "dirs", "std"]

[lib]
name = "glimmer_weave"
path = "src/lib.rs"

[[bin]]
name = "glimmer-repl"
path = "src/bin/repl.rs"
required-features = ["repl"]

[[bench]]
name = "allocator_bench"
path = "benches/allocator_bench.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "allocator_bench_simple"
path = "benches/allocator_bench_simple.rs"
harness = false
required-features = ["std"]
